Updated html file

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,7 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-
-<!-- stylesheets -->
-<link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
-<link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'>
-
-<!-- scripts -->
-
-<!-- Fonts and Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
 </head>
 <body>
 
@@ -44,39 +34,24 @@
   </header>
 
   <main>
-    <div class="mainContainer">
+    <section id = "#main-content">
+    </section>
+  </main>
+  <!-- <main>
+    <div class="mainContainer"> -->
       <!-- filters navigation starts here -->
-      <section class="filtersSection">
-
-        <select class="dropbtn">
-          <option selected disabled>Sort By</option>
-          <option>Price: Highest First</option>
-          <option>Price: Lowest First</option>
-          <option>Posted: Oldest First</option>
-          <option>Posted: Newest First</option>
-        </select>
-
-        <select class="dropbtn">
-          <option selected disabled>Filter</option>
-          <option>All Fruit</option>
-          <option>My Fruit</option>
-        </select>
-
-        <button class="sellFruit">Sell Fruit</button>
-
-      </section>
+      <!-- <section class="filtersSection">
+        <div class="filters">
+          <h2>Filters</h2>
+        </div>
+      </section> -->
       <!-- Filters navigation ends here -->
-
       <!-- Fruit listings start here -->
-      <!-- <h2>Fruit for Sale</h2> -->
-      <section class="fruitsSection">
+      <!-- <section class="fruitsSection">
+        <h2>Fruit for Sale</h2>
         <ul class="fruitContainer">
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -84,13 +59,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -98,13 +74,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -112,13 +89,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -126,13 +104,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -140,13 +119,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -154,13 +134,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -168,13 +149,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -182,13 +164,14 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
+          </li>
 
           <li class="product">
-            <div class="buttonContainer">
-              <i class="fa-solid fa-circle-info"></i>
-              <i class="fa-solid fa-heart-circle-plus"></i>
-            </div>
             <div class="productImage">
               <img src="https://dodo.ac/np/images/9/92/Fruit_Basket_NH_Icon.png" alt="fruits">
             </div>
@@ -196,16 +179,19 @@
             <div class="priceContainer">
               <p class="price">$4.99</p>
             </div>
-            <button class="addToCart">Add to cart</button>
-
+            <div class="buttonContainer">
+              <button class="moreInfo">More info</button>
+              <button class="addToCart">Add to cart</button>
+              <button class="addToCart">Favourite</button>
+            </div>
           </li>
 
         </ul>
       </section>
-    </div>
+    </div> -->
     <!-- fruit listings end here -->
-  </div>
-  </main>
+  <!-- </main> -->
+
 
   <footer>
     <p>footer</p>
